2016-??-?? Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.035_02)
* In 4.033_03 we added a patch from Petr Písař @ Red Hat for a problem on
  64-bit big-endian systems. The patch was applied but the unit test was not,
  also, there was no entry in the change log.
  Unit test provided by Vladimir Marek.
  t/40server_prepare.t test failed on s390x platform. Server-prepared
  values of types int, smallint, and tinyint are passed to application
  as 32-bit integer. The same buffer was interpreted as long integer
  by DBD::MySQL. This caused misaligned read/write and bogus
  interpretation of the values.
   (https://rt.cpan.org/Public/Bug/Display.html?id=57266)
* Remove dropdb, createdb, reload and shutdown admin functions from perldoc.
  These are deprecated by the C API.
  Use 'CREATE DATABASE..', 'DROP DATABASE...' and other SQL commands instead.
* Test rt75353-innodb-lock-timeout.t fails on MySQL Server 5.1 and earlier
  because innodb_lock_wait_timeout is not modifyable per session.
* Test rt25389-bin-case.t does not work on MySQL Server < 5.1, reported by
  GAAS.

2016-08-01 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.035_01)
* Apparently, on t/31insertid.t, there is one test that fails when compiled
  against libmysqlclient 5.7 or up; issuing a SELECT statement on the same
  database handle that previously executed an INSERT clears
  $dbh->{mysql_insertid}, while previously this was retained.
  (https://rt.cpan.org/Ticket/Display.html?id=108000)
* Removed appveyor.yml and mysql.mtest from CPAN releases.
* Converted README.pod to README.md because of installation failures on
  FreeBSD, reported by Don Randolph.
  (https://rt.cpan.org/Public/Bug/Display.html?id=114177)

2016-07-09 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.035)
*  Add DBI back to configure_requires, fix by miyagawa.

2016-07-06 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.034)
* Full version, to include all changes since 4.033.
